# iotedge

edge-agent/src/Microsoft.Azure.Devices.Edge.Agent.Service/: Hosting.cs  Microsoft.Azure.Devices.Edge.Agent.Service.csproj  Program.cs  Startup.cs
edge-util/src/Microsoft.Azure.Devices.Edge.Util/: Microsoft.Azure.Devices.Edge.Util.csproj
edge-util/src/Microsoft.Azure.Devices.Edge.Util/metrics/: MetricsListener.cs
edgelet/: Cargo.toml
edgelet/process-manager/: Cargo.toml
edgelet/process-manager/src/: error.rs  main.rs  unknown.rs  version.rs
edgelet/process-manager/src/pm/: mod.rs  program_data.rs  runner.rs
kubernetes/doc/: binding-roles-to-modules.md
